@@ -104,7 +104,7 @@ LDADD = \
 	$(XINERAMA_LIBS)              \
 	-lm
 
-INCLUDES=$(ESD_CFLAGS) $(IMLIB_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/intl
+INCLUDES = $(ESD_CFLAGS) $(IMLIB_CFLAGS) -I$(top_builddir) -I$(top_srcdir)/intl
 
 DEFS=-DENLIGHTENMENT_ROOT=\"@ENLIGHTENMENT_ROOT@\" -DENLIGHTENMENT_BIN=\"@ENLIGHTENMENT_BIN@\" -DLOCALEDIR=\"@LOCALEDIR@\"
 
